feat: Busca de variação de produto por ID e funcionalidade da tela de Estoque.
